make edits to report

--- a/report/report.tex
+++ b/report/report.tex
@@ -371,7 +371,7 @@ We also evaluted the model’s accuracy for each category individually, as shown
 \end{table}
 
 \subsubsection{Confusion Matrix}
-The confusion matrix for the Logistic Regression model (Figure \ref{fig:log_reg_confusion.png}) shows the model's classification performance across categories. The matrix illustrates the high precision in categories like \texttt{OVERDRAFT} and \texttt{MORTGAGE}, with fewer misclassifications across these categories. 
+The confusion matrix for the Logistic Regression model (Figure \ref{fig:confusion_matrix_logreg}) shows the model's classification performance across categories. The matrix illustrates the high precision in categories like \texttt{OVERDRAFT} and \texttt{MORTGAGE}, with fewer misclassifications across these categories. 
 
 \begin{figure}[h]
     \centering
