--- a/src/notebooks/kevin_q2_eda.ipynb
+++ b/src/notebooks/kevin_q2_eda.ipynb
@@ -16,10 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories = pd.read_csv('../../data_q2/q2-ucsd-cat-map.csv')\n",
-    "consumer = pd.read_parquet('../../data_q2/q2-ucsd-consDF.pqt')\n",
-    "acct = pd.read_parquet(\"../../data_q2/q2-ucsd-acctIDF.pqt\")\n",
-    "transactions = pd.read_parquet(\"../../data_q2/q2-ucsd-trxnDF.pqt\")"
+    "categories = pd.read_csv('../../data/q2-ucsd-cat-map.csv')\n",
+    "consumer = pd.read_parquet('../../data/q2-ucsd-consDF.pqt')\n",
+    "acct = pd.read_parquet(\"../../data/q2-ucsd-acctDF.pqt\")\n",
+    "transactions = pd.read_parquet(\"../../data/q2-ucsd-trxnDF.pqt\")"
    ]
   },
   {
@@ -588,33 +588,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-05-01</td>\n",
-       "      <td>680.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>654.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2805.36</td>\n",
-       "      <td>0.245748</td>\n",
-       "      <td>-0.099394</td>\n",
+       "      <td>824.24</td>\n",
+       "      <td>-0.094005</td>\n",
+       "      <td>-0.136727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>734.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>750.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>7667.01</td>\n",
-       "      <td>0.951391</td>\n",
-       "      <td>-0.007780</td>\n",
+       "      <td>2655.47</td>\n",
+       "      <td>1.160470</td>\n",
+       "      <td>-0.102219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-10-01</td>\n",
-       "      <td>676.0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>756.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>394.55</td>\n",
-       "      <td>0.193478</td>\n",
-       "      <td>-0.144824</td>\n",
+       "      <td>95.25</td>\n",
+       "      <td>1.238874</td>\n",
+       "      <td>-0.150464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -628,53 +628,53 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14995</th>\n",
-       "      <td>14995</td>\n",
-       "      <td>2022-03-08</td>\n",
-       "      <td>655.0</td>\n",
+       "      <td>9995</td>\n",
+       "      <td>2023-03-02</td>\n",
+       "      <td>578.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.080938</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-1.087132</td>\n",
+       "      <td>-0.152259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14996</th>\n",
-       "      <td>14996</td>\n",
-       "      <td>2022-01-15</td>\n",
-       "      <td>625.0</td>\n",
+       "      <td>9996</td>\n",
+       "      <td>2023-10-11</td>\n",
+       "      <td>610.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6821.92</td>\n",
-       "      <td>-0.472962</td>\n",
-       "      <td>-0.023705</td>\n",
+       "      <td>252.67</td>\n",
+       "      <td>-0.668973</td>\n",
+       "      <td>-0.147498</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14997</th>\n",
-       "      <td>14997</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>688.0</td>\n",
+       "      <td>9997</td>\n",
+       "      <td>2023-05-25</td>\n",
+       "      <td>675.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.350288</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>611.28</td>\n",
+       "      <td>0.180411</td>\n",
+       "      <td>-0.140740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14998</th>\n",
-       "      <td>14998</td>\n",
-       "      <td>2022-03-08</td>\n",
-       "      <td>722.0</td>\n",
+       "      <td>9998</td>\n",
+       "      <td>2023-11-02</td>\n",
+       "      <td>534.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.794581</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-862.99</td>\n",
+       "      <td>-1.662099</td>\n",
+       "      <td>-0.168522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14999</th>\n",
-       "      <td>14999</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "      <td>751.0</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>2023-08-09</td>\n",
+       "      <td>663.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2000.94</td>\n",
-       "      <td>1.173537</td>\n",
-       "      <td>-0.114553</td>\n",
+       "      <td>-9.02</td>\n",
+       "      <td>0.023602</td>\n",
+       "      <td>-0.152429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -685,28 +685,28 @@
        "      prism_consumer_id evaluation_date  credit_score  DQ_TARGET  balance  \\\n",
        "0                     0      2021-09-01         726.0        0.0   320.37   \n",
        "1                     1      2021-07-01         626.0        0.0  3302.42   \n",
-       "2                     2      2021-05-01         680.0        0.0  2805.36   \n",
-       "3                     3      2021-03-01         734.0        0.0  7667.01   \n",
-       "4                     4      2021-10-01         676.0        0.0   394.55   \n",
+       "2                    10      2022-02-01         654.0        0.0   824.24   \n",
+       "3                   100      2021-12-01         750.0        0.0  2655.47   \n",
+       "4                  1000      2021-03-01         756.0        0.0    95.25   \n",
        "...                 ...             ...           ...        ...      ...   \n",
-       "14995             14995      2022-03-08         655.0        NaN      NaN   \n",
-       "14996             14996      2022-01-15         625.0        NaN  6821.92   \n",
-       "14997             14997      2022-01-31         688.0        NaN      NaN   \n",
-       "14998             14998      2022-03-08         722.0        NaN      NaN   \n",
-       "14999             14999      2022-02-12         751.0        NaN  2000.94   \n",
+       "14995              9995      2023-03-02         578.0        NaN     0.00   \n",
+       "14996              9996      2023-10-11         610.0        NaN   252.67   \n",
+       "14997              9997      2023-05-25         675.0        NaN   611.28   \n",
+       "14998              9998      2023-11-02         534.0        NaN  -862.99   \n",
+       "14999              9999      2023-08-09         663.0        NaN    -9.02   \n",
        "\n",
        "       std_credit  std_balance  \n",
        "0        0.846851    -0.146222  \n",
        "1       -0.459894    -0.090027  \n",
-       "2        0.245748    -0.099394  \n",
-       "3        0.951391    -0.007780  \n",
-       "4        0.193478    -0.144824  \n",
+       "2       -0.094005    -0.136727  \n",
+       "3        1.160470    -0.102219  \n",
+       "4        1.238874    -0.150464  \n",
        "...           ...          ...  \n",
-       "14995   -0.080938          NaN  \n",
-       "14996   -0.472962    -0.023705  \n",
-       "14997    0.350288          NaN  \n",
-       "14998    0.794581          NaN  \n",
-       "14999    1.173537    -0.114553  \n",
+       "14995   -1.087132    -0.152259  \n",
+       "14996   -0.668973    -0.147498  \n",
+       "14997    0.180411    -0.140740  \n",
+       "14998   -1.662099    -0.168522  \n",
+       "14999    0.023602    -0.152429  \n",
        "\n",
        "[15000 rows x 7 columns]"
       ]
@@ -727,7 +727,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prism_consumer_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>spending_balance_ratio</th>\n",
+       "      <th>evaluation_date</th>\n",
+       "      <th>credit_score</th>\n",
+       "      <th>DQ_TARGET</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>29295.23</td>\n",
+       "      <td>320.37</td>\n",
+       "      <td>91.157326</td>\n",
+       "      <td>2021-09-01</td>\n",
+       "      <td>726.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>48002.17</td>\n",
+       "      <td>3302.42</td>\n",
+       "      <td>14.531053</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>626.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>42343.16</td>\n",
+       "      <td>824.24</td>\n",
+       "      <td>51.310116</td>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100</td>\n",
+       "      <td>74979.45</td>\n",
+       "      <td>2655.47</td>\n",
+       "      <td>28.225220</td>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>156268.06</td>\n",
+       "      <td>95.25</td>\n",
+       "      <td>1623.564260</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>756.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  prism_consumer_id     amount  balance  spending_balance_ratio  \\\n",
+       "0                 0   29295.23   320.37               91.157326   \n",
+       "1                 1   48002.17  3302.42               14.531053   \n",
+       "2                10   42343.16   824.24               51.310116   \n",
+       "3               100   74979.45  2655.47               28.225220   \n",
+       "4              1000  156268.06    95.25             1623.564260   \n",
+       "\n",
+       "  evaluation_date  credit_score  DQ_TARGET  \n",
+       "0      2021-09-01         726.0        0.0  \n",
+       "1      2021-07-01         626.0        0.0  \n",
+       "2      2022-02-01         654.0        0.0  \n",
+       "3      2021-12-01         750.0        0.0  \n",
+       "4      2021-03-01         756.0        0.0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# spending balance ratio\n",
+    "\n",
+    "total_trans = transactions.groupby(\"prism_consumer_id\")[[\"amount\"]].sum()\n",
+    "total_acc = acct.groupby(\"prism_consumer_id\")[[\"balance\"]].sum()\n",
+    "\n",
+    "spend_balance = total_trans.merge(total_acc, how=\"inner\", on=\"prism_consumer_id\")\n",
+    "spend_balance[\"spending_balance_ratio\"] = spend_balance[\"amount\"] / (spend_balance[\"balance\"] + 1)\n",
+    "spend_balance_dq = spend_balance.merge(consumer, how=\"inner\", on=\"prism_consumer_id\")\n",
+    "spend_balance_dq.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -827,51 +950,40 @@
       "Logistic Regression for ['std_balance']\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.98      0.35      0.52      1896\n",
-      "         1.0       0.12      0.91      0.21       186\n",
+      "         0.0       0.97      0.37      0.54      1898\n",
+      "         1.0       0.12      0.89      0.21       184\n",
       "\n",
-      "    accuracy                           0.40      2082\n",
+      "    accuracy                           0.42      2082\n",
       "   macro avg       0.55      0.63      0.37      2082\n",
-      "weighted avg       0.90      0.40      0.49      2082\n",
+      "weighted avg       0.90      0.42      0.51      2082\n",
       "\n",
       "\n",
       "Random Forest Classification for ['std_balance']\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.93      0.68      0.78      1896\n",
-      "         1.0       0.12      0.44      0.19       186\n",
+      "         0.0       0.93      0.68      0.79      1898\n",
+      "         1.0       0.13      0.50      0.21       184\n",
       "\n",
       "    accuracy                           0.66      2082\n",
-      "   macro avg       0.52      0.56      0.49      2082\n",
-      "weighted avg       0.85      0.66      0.73      2082\n",
+      "   macro avg       0.53      0.59      0.50      2082\n",
+      "weighted avg       0.86      0.66      0.74      2082\n",
       "\n",
-      "[LightGBM] [Info] Number of positive: 6004, number of negative: 6004\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000064 seconds.\n",
+      "[LightGBM] [Info] Number of positive: 5975, number of negative: 5975\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000336 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 255\n",
-      "[LightGBM] [Info] Number of data points in the train set: 12008, number of used features: 1\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11950, number of used features: 1\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
       "\n",
       "LGB Model Classification for ['std_balance']\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.95      0.68      0.80      1896\n",
-      "         1.0       0.16      0.63      0.26       186\n",
+      "         0.0       0.95      0.70      0.81      1898\n",
+      "         1.0       0.17      0.64      0.27       184\n",
       "\n",
-      "    accuracy                           0.68      2082\n",
-      "   macro avg       0.56      0.66      0.53      2082\n",
-      "weighted avg       0.88      0.68      0.75      2082\n",
-      "\n",
-      "\n",
-      "Balanced Random Forest Classification for ['std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.93      0.68      0.79      1896\n",
-      "         1.0       0.12      0.44      0.19       186\n",
-      "\n",
-      "    accuracy                           0.66      2082\n",
-      "   macro avg       0.52      0.56      0.49      2082\n",
-      "weighted avg       0.85      0.66      0.73      2082\n",
+      "    accuracy                           0.69      2082\n",
+      "   macro avg       0.56      0.67      0.54      2082\n",
+      "weighted avg       0.88      0.69      0.76      2082\n",
       "\n"
      ]
     }
@@ -883,65 +995,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic Regression for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.96      0.71      0.82      1896\n",
-      "         1.0       0.20      0.72      0.31       186\n",
-      "\n",
-      "    accuracy                           0.72      2082\n",
-      "   macro avg       0.58      0.72      0.57      2082\n",
-      "weighted avg       0.89      0.72      0.77      2082\n",
-      "\n",
-      "\n",
-      "Random Forest Classification for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.94      0.79      0.86      1896\n",
-      "         1.0       0.20      0.52      0.28       186\n",
-      "\n",
-      "    accuracy                           0.77      2082\n",
-      "   macro avg       0.57      0.65      0.57      2082\n",
-      "weighted avg       0.88      0.77      0.81      2082\n",
-      "\n",
-      "[LightGBM] [Info] Number of positive: 6898, number of negative: 6898\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000276 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
-      "[LightGBM] [Info] Total Bins 510\n",
-      "[LightGBM] [Info] Number of data points in the train set: 13796, number of used features: 2\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
-      "\n",
-      "LGB Model Classification for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.96      0.76      0.85      1896\n",
-      "         1.0       0.22      0.67      0.33       186\n",
-      "\n",
-      "    accuracy                           0.75      2082\n",
-      "   macro avg       0.59      0.72      0.59      2082\n",
-      "weighted avg       0.89      0.75      0.80      2082\n",
-      "\n",
-      "\n",
-      "Balanced Random Forest Classification for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.94      0.79      0.86      1896\n",
-      "         1.0       0.19      0.51      0.28       186\n",
-      "\n",
-      "    accuracy                           0.76      2082\n",
-      "   macro avg       0.57      0.65      0.57      2082\n",
-      "weighted avg       0.88      0.76      0.81      2082\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_classification([\"std_credit\", \"std_balance\"], \"DQ_TARGET\", consumer_balance)\n"
    ]
@@ -956,7 +1012,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -970,9 +1026,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
