--- a/src/notebooks/kevin_q2_eda.ipynb
+++ b/src/notebooks/kevin_q2_eda.ipynb
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -984,6 +984,17 @@
       "    accuracy                           0.69      2082\n",
       "   macro avg       0.56      0.67      0.54      2082\n",
       "weighted avg       0.88      0.69      0.76      2082\n",
+      "\n",
+      "\n",
+      "Balanced Random Forest Classification for ['std_balance']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.93      0.68      0.79      1898\n",
+      "         1.0       0.13      0.50      0.21       184\n",
+      "\n",
+      "    accuracy                           0.66      2082\n",
+      "   macro avg       0.53      0.59      0.50      2082\n",
+      "weighted avg       0.86      0.66      0.73      2082\n",
       "\n"
      ]
     }
@@ -995,11 +1006,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression for ['std_credit', 'std_balance']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.96      0.72      0.82      1898\n",
+      "         1.0       0.19      0.70      0.30       184\n",
+      "\n",
+      "    accuracy                           0.72      2082\n",
+      "   macro avg       0.58      0.71      0.56      2082\n",
+      "weighted avg       0.89      0.72      0.78      2082\n",
+      "\n",
+      "\n",
+      "Random Forest Classification for ['std_credit', 'std_balance']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.95      0.80      0.87      1898\n",
+      "         1.0       0.21      0.55      0.31       184\n",
+      "\n",
+      "    accuracy                           0.78      2082\n",
+      "   macro avg       0.58      0.68      0.59      2082\n",
+      "weighted avg       0.88      0.78      0.82      2082\n",
+      "\n",
+      "[LightGBM] [Info] Number of positive: 6906, number of negative: 6906\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000141 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 510\n",
+      "[LightGBM] [Info] Number of data points in the train set: 13812, number of used features: 2\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "\n",
+      "LGB Model Classification for ['std_credit', 'std_balance']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.96      0.77      0.86      1898\n",
+      "         1.0       0.22      0.66      0.33       184\n",
+      "\n",
+      "    accuracy                           0.76      2082\n",
+      "   macro avg       0.59      0.72      0.59      2082\n",
+      "weighted avg       0.89      0.76      0.81      2082\n",
+      "\n",
+      "\n",
+      "Balanced Random Forest Classification for ['std_credit', 'std_balance']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.95      0.80      0.87      1898\n",
+      "         1.0       0.22      0.55      0.31       184\n",
+      "\n",
+      "    accuracy                           0.78      2082\n",
+      "   macro avg       0.58      0.68      0.59      2082\n",
+      "weighted avg       0.88      0.78      0.82      2082\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "run_classification([\"std_credit\", \"std_balance\"], \"DQ_TARGET\", consumer_balance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression for ['spending_balance_ratio']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.93      0.94      0.93      1855\n",
+      "         1.0       0.21      0.17      0.19       170\n",
+      "\n",
+      "    accuracy                           0.88      2025\n",
+      "   macro avg       0.57      0.56      0.56      2025\n",
+      "weighted avg       0.87      0.88      0.87      2025\n",
+      "\n",
+      "\n",
+      "Random Forest Classification for ['spending_balance_ratio']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.93      0.68      0.79      1855\n",
+      "         1.0       0.11      0.43      0.18       170\n",
+      "\n",
+      "    accuracy                           0.66      2025\n",
+      "   macro avg       0.52      0.56      0.48      2025\n",
+      "weighted avg       0.86      0.66      0.74      2025\n",
+      "\n",
+      "[LightGBM] [Info] Number of positive: 5697, number of negative: 5697\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000138 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 255\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11394, number of used features: 1\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "\n",
+      "LGB Model Classification for ['spending_balance_ratio']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.95      0.71      0.81      1855\n",
+      "         1.0       0.15      0.56      0.23       170\n",
+      "\n",
+      "    accuracy                           0.69      2025\n",
+      "   macro avg       0.55      0.63      0.52      2025\n",
+      "weighted avg       0.88      0.69      0.76      2025\n",
+      "\n",
+      "\n",
+      "Balanced Random Forest Classification for ['spending_balance_ratio']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.93      0.68      0.79      1855\n",
+      "         1.0       0.11      0.43      0.18       170\n",
+      "\n",
+      "    accuracy                           0.66      2025\n",
+      "   macro avg       0.52      0.56      0.48      2025\n",
+      "weighted avg       0.86      0.66      0.74      2025\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_classification([\"spending_balance_ratio\"], \"DQ_TARGET\", spend_balance_dq)"
    ]
   },
   {
