account type features

--- a/src/notebooks/kurumi_q2_eda.ipynb
+++ b/src/notebooks/kurumi_q2_eda.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "16ea9550-e00f-429c-b572-6f6f7fb5dde1",
    "metadata": {},
    "outputs": [],
@@ -897,7 +897,7 @@
       "\n",
       "ROC-AUC Score: 0.587\n",
       "[LightGBM] [Info] Number of positive: 5697, number of negative: 5697\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000162 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000225 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 255\n",
       "[LightGBM] [Info] Number of data points in the train set: 11394, number of used features: 1\n",
@@ -2413,7 +2413,7 @@
       "\n",
       "ROC-AUC Score: 0.611\n",
       "[LightGBM] [Info] Number of positive: 7594, number of negative: 7594\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000690 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000873 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 49\n",
@@ -3236,7 +3236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "5932127d-99a3-49c4-8049-f0fd6fc5e9de",
    "metadata": {},
    "outputs": [
@@ -3278,7 +3278,7 @@
       "\n",
       "ROC-AUC Score: 0.691\n",
       "[LightGBM] [Info] Number of positive: 6485, number of negative: 6485\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000436 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000538 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 622\n",
@@ -4202,7 +4202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "id": "99a4a1ab-804c-45e1-9e41-ebac7ba26412",
    "metadata": {},
    "outputs": [],
@@ -4285,7 +4285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "a7444436-fe17-49fe-8921-2fe70888d8e2",
    "metadata": {
     "scrolled": true
@@ -4331,8 +4331,9 @@
       "\n",
       "ROC-AUC Score: 0.687\n",
       "[LightGBM] [Info] Number of positive: 6445, number of negative: 6445\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001002 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000456 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 616\n",
       "[LightGBM] [Info] Number of data points in the train set: 12890, number of used features: 9\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
