fix minor issue

--- a/src/notebooks/kurumi_q2_eda.ipynb
+++ b/src/notebooks/kurumi_q2_eda.ipynb
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "e0eec25d-3702-4ab5-8d91-79b1651aa514",
    "metadata": {},
    "outputs": [],
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "dbc9b9f6-b67f-4020-a240-d41b38e66b7b",
    "metadata": {},
    "outputs": [],
@@ -1560,8 +1560,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56711ea4-8076-4cc7-ba52-93c74a3dc2c4",
+   "metadata": {},
+   "source": [
+    "## Not Delinquent"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "5e577b56-2dd6-4e97-a950-14653f4a9b24",
    "metadata": {},
    "outputs": [
@@ -1581,12 +1589,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74bd45f8-dd86-4a7d-aa87-4b02f88241de",
+   "metadata": {},
+   "source": [
+    "## Delinquent"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "88ddd9b5-9132-4fed-8459-3adaeb1b20ed",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
